multi companies, google signin, sidenav template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <mat-drawer-container class="example-container h-100">
 
     <!-- sidenav -->
-    <mat-drawer #sidenav id="sidenav" mode="over" class="bg-dark">
+    <mat-drawer #sidenav id="sidenav" mode="over" style="background-color: whitesmoke;">
         <app-sidenav></app-sidenav>
     </mat-drawer>
 
