--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -47,15 +47,16 @@
                 <!---------------------------------------------------------------------->
                 <!-- INGRESAR / GOOGLE -->
                 <!---------------------------------------------------------------------->
-                <div class="text-center p-4 w-100">
-
-                    <!-- Normal Login -->
-                    <button class="btn btn-success btn-block btn-lg" type="submit">ENTRAR</button>
-
-                    <!-- Google Login -->
-                    <!-- <button class="btn btn-danger m-2" type="button" id="btnGoogle" data-toggle="tooltip">Google
-                    </button> -->
-
+                <div class="row text-center p-4 w-100">
+                    <div class="col">
+                        <!-- Normal Login -->
+                        <button class="btn btn-success btn-block btn-lg" type="submit">ENTRAR</button>
+                    </div>
+                    <div class="col">
+                        <!-- Google Login -->
+                        <button class="btn btn-danger btn-block btn-lg" type="button" id="btnGoogle" data-toggle="tooltip">Google
+                        </button>
+                    </div>
                 </div>
 
                 <!---------------------------------------------------------------------->
