--- a/src/app/pages/user/desktops/desktops.component.html
+++ b/src/app/pages/user/desktops/desktops.component.html
@@ -3,7 +3,7 @@
         <div class="m-2 animated fadeIn">
 
             <div class="card bg-info lead text-white">
-                <div class="card-header">Ventanillas</div>
+                <div class="card-header">Escritorios</div>
                 <div class="card-body card-tickets-info table-responsive-sm">
 
                     <table class="table table-sm text-white">
@@ -23,7 +23,7 @@
             <div class="my-4"></div>
 
             <div class="card lead">
-                <div class="card-header">Alta de Ventanillas</div>
+                <div class="card-header">Alta de Escritorios</div>
                 <div class="card-body">
 
                     <app-desktop-create-form (desktopCreated)="desktopCreated($event)"></app-desktop-create-form>
