--- a/src/app/pages/user/assistants/assistant-create-form/assistant-create-form.component.html
+++ b/src/app/pages/user/assistants/assistant-create-form/assistant-create-form.component.html
@@ -1,4 +1,3 @@
-
 <form autocomplete="off" style="color: brown;" ngNativeValidate #formDirective="ngForm" [formGroup]="forma"
     (ngSubmit)="createAssistant(formDirective)">
 
@@ -11,6 +10,15 @@
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" class="w-100">
+        <mat-label>Seleccione una empresa</mat-label>
+        <mat-select formControlName="idCompany" name="idCompany" #selectDesktop matNativeControl required>
+            <mat-option *ngFor="let company of userService.companies" [value]="company._id" (click)="getSkills(company._id)">
+                {{company.tx_company_name}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+
+    <mat-form-field color="warn" appearance="fill" class="w-100">
         <mat-label>Nombre</mat-label>
         <input matInput placeholder="Nombre" formControlName="nombre" name="nombre" type="text" required
             placeholder="Nombre">
@@ -18,8 +26,7 @@
 
     <mat-form-field color="warn" appearance="fill" class="w-100">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required
-            placeholder="Correo">
+        <input matInput placeholder="Email" formControlName="email" name="email" type="email" required>
     </mat-form-field>
 
     <mat-form-field color="warn" appearance="fill" class="w-100">
@@ -36,18 +43,32 @@
 
 
     <mat-selection-list [ngModelOptions]="{standalone: true}" [(ngModel)]="selStrSkills">
-        <mat-list-option  name="selStrSkills" *ngFor="let skill of skills" (click)="setNewSkill(skill)" [value]="skill._id">
-            <span class="mat-select-option-nowarp" >{{skill.tx_skill}}</span>
+        <mat-list-option name="selStrSkills" *ngFor="let skill of skills" (click)="setNewSkill(skill)"
+            [value]="skill._id">
+            <span class="mat-select-option-nowarp">{{skill.tx_skill}}</span>
         </mat-list-option>
     </mat-selection-list>
 
 
-    <div class="form-group text-center">
-        <button *ngIf="!assistantEdit" class="btn btn-success btn-block text-uppercase waves-effect waves-light" type="submit">Alta de
-            Asistente</button>
-        <button *ngIf="assistantEdit" class="btn btn-danger btn-block text-uppercase waves-effect waves-light" type="submit">Guardar Cambios
-        </button>
+    <div *ngIf="!assistantEdit" class="row text-center">
+        <div class="col">
+            <button *ngIf="!assistantEdit" class="btn btn-success btn-block text-uppercase" type="submit">
+                Alta de Asistente
+            </button>
         </div>
+    </div>
+    <div *ngIf="assistantEdit" class="row">
+        <div class="col w-100">
+            <button class="btn btn-danger btn-block text-uppercase" type="submit">
+                Guardar
+            </button>
+        </div>
+        <div class="col">
+            <button class="btn btn-warning btn-block text-uppercase" (click)="resetForm(formDirective)">
+                Limpiar
+            </button>
+        </div>
+    </div>
+
 
 </form>
-
