--- a/src/app/pages/user/assistants/assistants.component.html
+++ b/src/app/pages/user/assistants/assistants.component.html
@@ -35,7 +35,7 @@
             <div class="my-4"></div>
 
             <div class="card lead">
-                <div class="card-header bg-success">Alta de asistente</div>
+                <div class="card-header">Alta de asistentes para {{user.id_company.tx_company_name}}</div>
                 <div class="card-body">
 
                     <app-assistant-create-form [assistantEdit]="assistantEdit"
