--- a/src/app/pages/user/desktops/desktops.component.html
+++ b/src/app/pages/user/desktops/desktops.component.html
@@ -23,7 +23,7 @@
             <div class="my-4"></div>
 
             <div class="card lead">
-                <div class="card-header">Alta de Escritorios</div>
+                <div class="card-header">Alta de Escritorios para {{user.id_company.tx_company_name}}</div>
                 <div class="card-body">
 
                     <app-desktop-create-form (desktopCreated)="desktopCreated($event)"></app-desktop-create-form>
