--- a/src/app/pages/user/dashboard/dashboard.component.html
+++ b/src/app/pages/user/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container animated fadeIn">
     <div class="row">
         <div class="col">
-            Dashboard
+            Working on it
         </div>
     </div>
 </div>
