--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,7 +1,7 @@
 <div>
     <mat-form-field *ngIf="userService.usuario" color="warn" appearance="fill" class="w-100">
         <mat-label>Seleccione una empresa</mat-label>
-        <mat-select formControlName="idCompany" [value]="user.id_company._id" name="idCompany" #selectDesktop matNativeControl required>
+        <mat-select formControlName="idCompany" [value]="user.id_company?._id" name="idCompany" #selectDesktop matNativeControl required>
             <mat-option *ngFor="let company of companies" [value]="company._id" (click)="companySelected(company)">
                 {{company.tx_company_name}}
             </mat-option>
