--- a/src/app/pages/user/skills/skills.component.html
+++ b/src/app/pages/user/skills/skills.component.html
@@ -24,7 +24,7 @@
             <div class="my-4"></div>
 
             <div class="card lead">
-                <div class="card-header">Alta de Skills para {{user.id_company.tx_company_name}}</div>
+                <div class="card-header">Alta de Skills para {{user.id_company?.tx_company_name}}</div>
                 <div class="card-body">
                     <app-skill-create-form (skillCreated)="skillCreated($event)"></app-skill-create-form>
                 </div>
